<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BountyHunter!</string>
    <string name="app_name">Bounty Hunter</string>
    <string name="titlemenu">Welcome to Bounty Hunter!</string>
    <string name="Button">Begin the hunt</string>
    <string name="menutest">Testing New Page String</string>
    <string name="testmenuButton">Click to go back to home screen</string>
    <string name="MapLocation">Map Location</string>
    <string name="DebugLocation">Debug Location</string>
    <string name="Rooms">Join a Room</string>
    <string name="Create">Create a Room</string>
    <string name="thisismenu">Main Menu</string>
    
    <string name="createTitle">Create a Room</string>
    <string name="feedbackRoomName">Room Name</string>
    <string name="feedbackPlayerName">Player Name</string>
    
    <string name="listTitle">List of Current Rooms: </string>
    
    <string name="roomTitle">Room Information </string>
    
    <string name="MenuTitle">Bounty Hunter</string>
</resources>
