<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/thisismenu" android:layout_width="wrap_content"></TextView>
    <Button 
    	android:layout_height="wrap_content" 
    	android:id="@+id/button1" 
    	android:layout_width="wrap_content" 
    	android:text="@string/MapLocation"
    	android:onClick="mapLocation"></Button>
    <Button 
    	android:layout_height="wrap_content" 
    	android:text="@string/DebugLocation" 
    	android:id="@+id/button2" 
    	android:layout_width="wrap_content"
    	android:onClick="debugLocation"></Button>
    <Button 
    	android:layout_height="wrap_content" 
    	android:text="@string/Rooms" 
    	android:id="@+id/button3" 
    	android:layout_width="wrap_content"
    	android:onClick="rooms"></Button>
</LinearLayout>
